--- a/style.css
+++ b/style.css
@@ -2058,7 +2058,13 @@ HEADER MAIN SECTION
 }
 
 .header-main {
-	padding: 30px 0;
+	/* padding: 30px 0;
+	height: 50px; */
+    padding: 0 24px;
+    color: #c9e2f1;
+    background: #2B7FC3;
+    border-top: 4px solid #1D5C8F;
+    border-bottom: 2px solid #D7D5D4;
 }
 
 body:not(.home) .site-header, 
