--- a/style.css
+++ b/style.css
@@ -2060,7 +2060,7 @@ HEADER MAIN SECTION
 .header-main {
 	/* padding: 30px 0;
 	height: 50px; */
-    padding: 0 24px;
+    padding: 17px 24px;
     color: #c9e2f1;
     background: #2B7FC3;
     border-top: 4px solid #1D5C8F;
@@ -2144,7 +2144,7 @@ body.home:not(.banner-enabled) .site-header {
 }
 
 .main-navigation ul li a {
-	display: inline-block;
+	display: none;
 	vertical-align: middle;
 	padding: 17px;
 	color: #000;
